homepage sim overflow fix

--- a/style/part/_card-section.scss
+++ b/style/part/_card-section.scss
@@ -55,6 +55,9 @@
     justify-content: center;
     min-height: 340px;
     min-width: 360px;
+    @include respond-below(lg) {
+      min-width: auto;
+    }
     @include respond-below(sm) {
       min-width: 340px;
     }
